--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": false,
-    "module": "commonjs",
-    "target": "es5",
-    "jsx": "react",
+    "target": "es2016",
     "downlevelIteration": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
@@ -15,7 +13,12 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "useDefineForClassFields": true,
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "jsx": "react",
+    "lib": ["es5", "es2015", "es2016", "dom", "es2015.promise"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "removeComments": true
   },
   "include": [
     "src"
